<resources>
    <string name="app_name">ProductViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Product Viewer</string>
    <string name="nav_header_subtitle">nWeave.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <!--    <string name="menu_tools">Tools</string>-->
    <!--    <string name="menu_share">Share</string>-->
    <!--    <string name="menu_send">Send</string>-->
    <string name="menu_all_products">All Products</string>
    <string name="menu_most_cheapest_products">Most Cheapest products</string>
    <string name="menu_most_expensive_product">Most Expensive Product</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">product_name</string>
    <string name="product_details">product_details</string>
    <string name="product_viewer">Product Viewer</string>
    <string name="menu_retrofit">Retrofit Retrieving Method</string>
    <string name="menu_http">HTTP Retrieving Method</string>
    <string name="price">price</string>


</resources>
