<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_products">

    <fragment
        android:id="@+id/nav_all_products"
        android:name="com.example.productviewer.fragment.AllProductsFragment"
        android:label="@string/menu_all_products"
        tools:layout="@layout/fragment_all_products" />

    <fragment
        android:id="@+id/nav_most_cheapest_products"
        android:name="com.example.productviewer.fragment.MostCheapestPrductsFragment"
        android:label="@string/menu_most_cheapest_products"
        tools:layout="@layout/fragment_most_cheapest_products" />

    <fragment
        android:id="@+id/nav_most_expensive_products"
        android:name="com.example.productviewer.fragment.MostExpensiveProductsFragment"
        android:label="@string/menu_most_expensive_product"
        tools:layout="@layout/fragment_most_expensive_products" />

    <fragment
        android:id="@+id/product_details"
        android:name="com.example.productviewer.fragment.ProductDetailsFragment"
        android:label="product details"
        tools:layout="@layout/fragment_product_details" />


</navigation>