<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/icons"
    android:padding="10dp">

    <TextView
        android:id="@+id/product_name_overview"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/product_image_overview"
        app:layout_constraintTop_toBottomOf="@+id/product_image_overview" />

    <ImageView
        android:id="@+id/product_image_overview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopping" />

    <TextView
        android:id="@+id/product_details_overview"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/product_details"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/product_image_overview"
        app:layout_constraintStart_toStartOf="@+id/product_image_overview"
        app:layout_constraintTop_toBottomOf="@+id/product_name_overview" />

    <TextView
        android:id="@+id/price_overview"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/product_details_overview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_name_overview"
        tools:layout_editor_absoluteY="221dp" />


</androidx.constraintlayout.widget.ConstraintLayout>